class Gift:
    """
    Classe Cadeau
    """

    def __init__(self, name, weight, x, y, score, ratio):
        self.name = name
        self.weight = weight
        self.x = x
        self.y = y
        self.score = score
        self.ratio = ratio
